_sass/gallery.scss
body {
  width: 100%;
  background: #f9f9f9;
}

.city-page {
  flex-grow: 1;
  z-index: 1;
  flex-grow: 1;
  padding: 30px 10px 0 10px;
}

.city {
  text-align: center;
}

.gallery-body {
  background: #f9f9f9;
  display: flex;
  flex-direction: row;
  -webkit-transition: 0.3s ease;
  transition: 0.3s ease;
}

.page-content {
  padding-top: 0;
  padding-bottom: 40px;
}

.header-img-container {
  position: relative;
  display: flex;
  min-width: 220px;
  max-width: 300px;

  .header-img {
    -webkit-filter: blur(2px);
    filter: blur(2px);
    max-height: 100%;
    object-fit: cover;
    width: 100%;
  }

  .header-label {
    font-family: "oswald", sans-serif;
    font-size: 36px;
    text-align: left;
    margin: 40px 0 0 25px;
    color: #333;
    width: min-content;
    min-width: 200px;
    position: fixed;

    .page-title {
      display: inline-block;
      width: 100%;
    }

    a {
      color: #333;
      -webkit-transition: .3s ease-in-out;
    }

    .city-link {
      font-size: 25px;
      display: block;
      width: min-content;

      &:hover {
        text-decoration: none;
        margin-left: 5px;
        -webkit-transition: .3s ease-in-out;
        transition: .3s ease-in-out;
      }
    }

    .map-icon {
      display: inline;
      margin-left: 10px;
      cursor: pointer;

      &:hover {
        text-decoration: none;
        color: #d95040;
        -webkit-transition: .3s ease-in-out;
        transition: .3s ease-in-out;
      }
    }
  }
}

.header-img-container-inside {
  opacity: 0;
}

.header-img-container-outside {
  z-index: 3;
  background: #f9f9f9;
  position: fixed;
  -webkit-transition: 0.15s ease;
  transition: 0.15s ease;
}

.gallery-page-wrapper {
  padding-top: 10px;
  margin: 0 auto;
}

.gallery-container {
  display: inline-grid;
  grid-template-columns: 50% 50%;
  width: 100%;
}

.gallery-column {
  display: inline-flex;
  flex-direction: column;
  vertical-align: top;
}

// .column-thumb {
//   display: none;
// }

.photo-container {
  background: white;
  border-radius: 2px;
  margin: 10px;
  position: relative;
  min-height: 120px;
}

.photo {
  -webkit-transition: .3s ease-in;
  border-radius: 2px;
  cursor: pointer;
  object-fit: cover;
  width: 100%;

  &:hover {
    -webkit-transition: .3s ease-in-out;
    opacity: 0.85;
    transition: .3s ease-in-out;
  }
}

.photo-blur {
  filter: blur(5px);
}

.photo-final {
  left: 0;
  position: absolute;
  z-index: 1;
  opacity: 1;
}

.photo-invisible {
  opacity: 0;
}

.gallery-body-landscape {
  flex-direction: column;

  .landscape-page {
    padding: 23px 5px 0 5px;
  }

  .page-content-landscape {
    padding-bottom: 37px;

    .gallery-page-wrapper-landscape {
      padding-top: 75px;
    }
  }

  .photo-container-landscape {
    margin: 5px;
  }

  .header-img-container-landscape {
    max-width: inherit;
    min-width: inherit;

    .header-label-landscape {
      width: 100%;
      background: #f9f9f9;
      z-index: 3;
      margin: 0 10px 0 10px;
      text-align: center;
      height: 78px;
      padding-top: 25px;
      display: flex;
      flex-direction: column;
      justify-content: space-around;

      .page-title-landscape {
        display: flex;
        justify-content: center;
      }

      a {
        margin: 0 16px;
        display: flex;
        place-self: flex-end;
      }

      .landscape-link {
        font-size: 22px;
      }
    }
  }
}

@media screen and (max-width: 1280px) {
  .gallery-body {
    .page-content {
      padding-bottom: 45px;
    }

    .photo-container {
      margin: 7.5px;
    }
  }

  .header-img-container-outside {
    min-width: 195px;
    max-width: 250px;

    .header-label {
      font-size: 32px;
      min-width: 175px;

      .city-link {
        font-size: 25px;
      }
    }

    .header-label-landscape {
      height: 82px;

      a {
        font-size: 28px;
        margin: 0 12px;
      }
    }
  }
}

@media screen and (max-width: 850px) {
  .header-img-container-outside {
    max-width: inherit;
    min-width: inherit;

    .header-label {
      width: 100%;
      background: #f9f9f9;
      z-index: 3;
      margin: 35px 0px 0 0px;
      padding: 0 10px;

      .map-icon {
        margin-left: 5px;
      }

      font-size: 26px;

      .city-link {
        font-size: 22px;
      }
    }

    .header-label-landscape {
      margin: 35px 10px 0 10px;
      padding-top: 0;
      height: 50px;

      a {
        font-size: 24px;
      }
    }
  }

  .gallery-body {
    flex-direction: column;

    .city-page {
      padding: 30px 5px 0 5px;
    }

    .page-content {
      padding-bottom: 37px;

      .gallery-page-wrapper {
        padding-top: 110px;
      }

      // .column-thumb {
      //   display: flex;
      // }

      // .column-full {
      //   display: none;
      // }
    }

    .photo-container {
      margin: 5px;
    }
  }

  .gallery-body-landscape .page-content-landscape .gallery-page-wrapper-landscape {
    padding-top: 50px;
  }
}

@media screen and (max-width: 650px) {
  .header-img-container-outside {
    .header-label {

      .map-icon {
        margin-left: 4px;
      }

      font-size: 23px;

      .city-link {
        font-size: 20px;
      }
    }
  }

  .gallery-body {
    .page-content .gallery-page-wrapper {
      padding-top: 100px;
    }
  }
}

